--- a/index.html
+++ b/index.html
@@ -5,8 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section class="vagetable">
+    <div class="half-width">
+    <h1>
+        <span class="color">Skip</span> The Diet, <br>
+        Just Eat Healthy <br>
+        With Food Network<br>
+    </h1>
+    <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+    <a class="order-food" target="_blank" href="">Order Food</a>
+</div>
+<div class="half-width">
+    <img src="images/female/Group 8425.png" alt="">
+</div>
+</section>
+<section class="vagetable food">
+    <div class="half-width">
+        <img src="images/female/Person Image.png" alt="">
+    </div>
+    <div class="half-width">
+        <h2>About Me</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum diam orci pretium a pharetra,feugiat cursus. Dictumst risus, sem egestas odio cras adipiscing vulputate. Nisi, risus in suscipit non. Noncommodo volutpat, pharetra, vel.</p>
+        <a class="order-food" target="_blank" href="">Contact me</a>
+    </div>
+</section>
+<section class=" div-area">
+    <div class="recipes">
+        <h2>My recipies</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+    </div>
+    <div class="recipe-area">
+    <div class="food-picture">
+        <img src="images/food/Project Cover.jpg" alt="">
+        <h3>Recipie Title</h3>
+        <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lacus fermentum amet faucibus sed id nisi lectus at</p>
+    </div>
+    <div class="food-picture">
+        <img src="images/food/Project Cover1.jpg" alt="">
+        <h3>Recipie Title</h3>
+        <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lacus fermentum amet faucibus sed id nisi lectus at</p>
+    </div>
+    <div class="food-picture" >
+        <img src="images/food/Project Cover.png" alt="">
+        <h3>Recipie Title</h3>
+        <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lacus fermentum amet faucibus sed id nisi lectus at</p>
+    </div>
+    </div>
+</section>
+<section class="challen border">
+    <div class="challen-area">
+        <h1>700k</h1>
+        <p>Youtube Subscribers</p>
+    </div>
+    <div class="challen-area">
+        <h1>2.4m</h1>
+        <p>Instagram Followers</p>
+    </div>
+     <div class="challen-area">
+         <h1>100k</h1>
+         <p>Dribbble Shot Likes</p>
+     </div>
+     </section>
+     <section class="internet">
+        <div>
+            <h4><span class="orange">FOOD</span> <span class="span">NETWORK</span></h4>
+            <p>Eat healthy to live healthy. Live healthy to live happy</p>
+        </div>
+</section>
 </body>
 </html>
