--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         With Food Network<br>
     </h1>
     <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
-    <a class="order-food" target="_blank" href="">Order Food</a>
+    <a class="order-food" target="_blank" href="https://125salma.github.io/web-potfolio/index.html">Order Food</a>
 </div>
 <div class="half-width">
     <img src="images/female/Group 8425.png" alt="">
@@ -32,7 +32,7 @@
     <div class="half-width">
         <h2>About Me</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum diam orci pretium a pharetra,feugiat cursus. Dictumst risus, sem egestas odio cras adipiscing vulputate. Nisi, risus in suscipit non. Noncommodo volutpat, pharetra, vel.</p>
-        <a class="order-food" target="_blank" href="">Contact me</a>
+        <a class="order-food" target="_blank" href="https://125salma.github.io/web-potfolio/index.html">Contact me</a>
     </div>
 </section>
 <section class=" div-area">
